--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-scr/main/resources/*.yml
+scr/main/resources/application.yml
 
 ### STS ###
 .apt_generated
